--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
         <div class="input-group col-md-3 mb-2 mb-md-0">
-          <input class="form-control" id="doration" placeholder="slider change duration">
+          <input class="form-control" id="duration" type="number" min="0" oninput="validity.valid||(value='')" placeholder="Change duration (in MiliSeconds)">
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
       <div class="row gallery">
 
+      </div>
+    </section>
+    <section id="loading-spinner" class="d-none">
+      <div class="d-flex justify-content-center m-5">
+        <div class="spinner-border text-info" role="status">
+          <span class="visually-hidden"></span>
+        </div>
       </div>
     </section>
     <!-- slider -->
