--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
       </div>
       <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
     </div>
+    <!-- loading spinner!!! -->
+    <section id="loading-spinner" class="d-none">
+      <div class="d-flex justify-content-center m-5">
+        <div class="spinner-border text-info" role="status">
+          <span class="visually-hidden"></span>
+        </div>
+      </div>
+    </section>
     <section class="images">
       <div class="justify-content-around align-items-center mt-3 gallery-header mb-2">
         <h3 class="head-title text-center">Select image for create slider</h3>
@@ -34,13 +42,6 @@
       </div>
       <div class="row gallery">
 
-      </div>
-    </section>
-    <section id="loading-spinner" class="d-none">
-      <div class="d-flex justify-content-center m-5">
-        <div class="spinner-border text-info" role="status">
-          <span class="visually-hidden"></span>
-        </div>
       </div>
     </section>
     <!-- slider -->
